--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,19 @@ body {
   margin: 20px;
 }
 
+.player--right {
+  transform: rotate(0deg);
+}
+.player--up {
+  transform: rotate(270deg);
+}
+.player--left {
+  transform: rotate(180deg);
+}
+.player--bottom {
+  transform: rotate(90deg);
+}
+
 .row {
   display: flex;
   justify-content: center;
