--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,10 @@ body {
   border-style: solid;
   border-width: 15px 0 15px 35px;
   border-color: transparent transparent transparent blue;
+  z-index: 3;
 
   margin: 20px;
 }
-
 .player--right {
   transform: rotate(0deg);
 }
