--- a/css/style.css
+++ b/css/style.css
@@ -6,26 +6,25 @@ body {
 }
 
 .player {
-  width: 0;
-  height: 0;
-  border-style: solid;
+  width: 28px;
+  height: 32px;
+  background-image: url('../img/sprite.png');
+  /*border-style: solid;
   border-width: 15px 0 15px 35px;
-  border-color: transparent transparent transparent blue;
-  z-index: 3;
-
+  border-color: transparent transparent transparent blue;*/
   margin: 20px;
 }
 .player--right {
-  transform: rotate(0deg);
+  background-position-y: 64px;
 }
 .player--up {
-  transform: rotate(270deg);
+  background-position-y: 32px;
 }
 .player--left {
-  transform: rotate(180deg);
+  background-position-y: 96px;
 }
 .player--bottom {
-  transform: rotate(90deg);
+  background-position-y: 0px;
 }
 
 .row {
@@ -35,12 +34,12 @@ body {
 }
 
 .cell {
-  background-color: #fff;
+  background-color: rgb(214, 209, 138);
   width: 70px;
   height: 70px;
   border: .1em solid #000000;
 }
 
 .targetCell {
-  background-color: green;
+  background-color: rgb(3, 31, 15);
 }
